manifests/kibana_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
spec:
  ingressClassName: public
  tls:
  - hosts:
      - "kibana.jackdevries.com"
  rules:
  - host: "kibana.jackdevries.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
